--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
         <h2>CarX Drift Racing Online mods</h2>
         <div class="modentry">
             <img class="modimgleft" src="site-images/CT.png">
-            <div class="modentryTextLeft">
+            <div class="modentryText">
                 <h3>Cinematic Tools</h3>
+                <hr>
                 <p><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.It also features animatable FOV and Tilt controls.Installation is described in the included Readme.txt file in the zip.</p>
                 <a href="CinematicTools.zip">Download Cinematic Tools</a>
             </div>
         </div>
         <div class="modentry">
-            <div class="modentryTextRight">
+            <div class="modentryText">
                 <h3>Community Sticker Pack</h3>
+                <hr>
                 <p>This pack contains 1231 new stickers. It has a built in update detection mechanism that will notify you when the pack is updated. Stickers that are white color are colorable. This pack works similiarly to car mods, you need to have the pack installed to see other people with custom stickers online. To remove the pack be sure to use the provided uninstaller in the CarX folder and follow instructions.<br><br>Big thanks to Huskyy for a lot of help during development.</p>
                 <a href="CarXStickerPack.html">Download Community Sticker Pack</a>
                 <br>
