--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h1>Zi9's Software Creations</h1>
-    <section>
+    <div class="content">
+        <h1>Zi9's Software Creations</h1>
         <h2>CarX Drift Racing Online mods</h2>
         <div class="modentry">
             <img class="modimgleft" src="site-images/CT.png">
@@ -30,7 +30,7 @@
             </div>
             <img class="modimgright" src="site-images/Stickerpack.png">
         </div>
-    </section>
+    </div>
 </body>
 
 </html>
