--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
             </div>
             <img class="modimgright" src="site-images/Stickerpack.png">
         </div>
+        <footer>
+            <div class="footerleft">
+                <p>Contact me at Zi9#3641 on Discord</p>
+            </div>
+            <div class="footerright">
+                <p>Background image provided by KVERTH</p>
+            </div>
+        </footer>
     </div>
 </body>
 
