--- a/index.html
+++ b/index.html
@@ -30,6 +30,24 @@
             </div>
             <img class="modimgright" src="site-images/Stickerpack.png">
         </div>
+        <div class="modentry">
+            <img class="modimgleft" src="site-images/SoundMod.png">
+            <div class="modentryText">
+                <h3>Assetto Corsa Soundbank Loader Plugin</h3>
+                <hr>
+                <p>This plugin allows you to use soundbanks from the game Assetto Corsa and replace the default ingame sounds with the ones from the soundbank. It uses the FMOD sound engine.<br><br>Sadly it has been broken due to CarX implementing FMOD themselves and that breaks my implementation. Additionally it was going to have a menu where you can select which soundbank to load and automatic loading of the bank you select on race start. Currently development of this plugin has been put on hold but there is a chance i will revisit it sometime in the future.</p>
+                <p>Download link unavailable</p>
+            </div>
+        </div>
+        <div class="modentry">
+            <div class="modentryText">
+                <h3>Custom Map Loader Plugin</h3>
+                <hr>
+                <p>This plugin allows you to load a custom map from an OBJ format 3D model and use it as a track in the game. To make collisions work correctly you need to have a single mesh OBJ for collisions. This plugin also doesn't touch the original track's collision model so you can just go back to the original track without even leaving the lobby. Development has been put on hold. Planned features were going to inclue a menu where you select which map to load and the ability to disable and enable maps ingame. <br><br>Big thanks to Huskyy and Mr.CoolGoat for help during development</p>
+                <p>Download link unavailable</p>
+            </div>
+            <img class="modimgright" src="site-images/MapLoader.png">
+        </div>
         <footer>
             <div class="footerleft">
                 <p>Contact me at Zi9#3641 on Discord</p>
