--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Zi9's Software Creations</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="site-images/icon.png">
 </head>
 
 <body>
