doing work on new site

--- a/index.html
+++ b/index.html
@@ -8,50 +8,25 @@
 </head>
 
 <body>
+    <div class="background"></div>
     <div class="content">
-        <h1>Zi9's Software Creations</h1>
-        <h2>CarX Drift Racing Online mods</h2>
-        <div class="modentry">
-            <img class="modimgleft" src="site-images/CT.png">
-            <div class="modentryText">
-                <h3>Cinematic Tools</h3>
-                <hr>
-                <p><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.It also features animatable FOV and Tilt controls.Installation is described in the included Readme.txt file in the zip.</p>
-                <a href="CinematicTools.zip">Download Cinematic Tools</a>
-            </div>
+        <h1 class="text titlebig">Zi9's Software Creations</h1>
+        <h2 class="text titlesub">CarX Drift Racing Online mods</h2>
+
+        <div class="modShowcaseCard">
+            <h3 class="modShowcaseCardTitle">Cinematic Tools</h3>
+            <hr>
+            <img class="modShowcaseCardImg" src="site-images/CT.png">
         </div>
-        <div class="modentry">
-            <div class="modentryText">
-                <h3>Community Sticker Pack</h3>
-                <hr>
-                <p>This pack contains 1231 new stickers. It has a built in update detection mechanism that will notify you when the pack is updated. Stickers that are white color are colorable. This pack works similiarly to car mods, you need to have the pack installed to see other people with custom stickers online. To remove the pack be sure to use the provided uninstaller in the CarX folder and follow instructions.<br><br>Big thanks to Huskyy for a lot of help during development.</p>
-                <a href="CarXStickerPack.html">Download Community Sticker Pack</a>
-            </div>
-            <img class="modimgright" src="site-images/Stickerpack.png">
-        </div>
-        <div class="modentry">
-            <img class="modimgleft" src="site-images/SoundMod.png">
-            <div class="modentryText">
-                <h3>Assetto Corsa Soundbank Loader Plugin</h3>
-                <hr>
-                <p>This plugin allows you to use soundbanks from the game Assetto Corsa and replace the default ingame sounds with the ones from the soundbank. It uses the FMOD sound engine.<br><br>Sadly it has been broken due to CarX implementing FMOD themselves and that breaks my implementation. Additionally it was going to have a menu where you can select which soundbank to load and automatic loading of the bank you select on race start. Currently development of this plugin has been put on hold but there is a chance i will revisit it sometime in the future.</p>
-                <p>Download link unavailable</p>
-            </div>
-        </div>
-        <div class="modentry">
-            <div class="modentryText">
-                <h3>Custom Map Loader Plugin</h3>
-                <hr>
-                <p>This plugin allows you to load a custom map from an OBJ format 3D model and use it as a track in the game. To make collisions work correctly you need to have a single mesh OBJ for collisions. This plugin also doesn't touch the original track's collision model so you can just go back to the original track without even leaving the lobby. Development has been put on hold. Planned features were going to inclue a menu where you select which map to load and the ability to disable and enable maps ingame. <br><br>Big thanks to Huskyy and Mr.CoolGoat for help during development</p>
-                <p>Download link unavailable</p>
-            </div>
-            <img class="modimgright" src="site-images/MapLoader.png">
-        </div>
+
+
+
+
         <footer>
-            <div class="footerleft">
+            <div class="text footerleft">
                 <p>Contact me at Zi9#3641 on Discord</p>
             </div>
-            <div class="footerright">
+            <div class="text footerright">
                 <p>Background image provided by KVERTH</p>
             </div>
         </footer>
