--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Zi9's Software Creations</h1>
         <h2>CarX Drift Racing Online mods</h2>
         <div class="modentry">
-            <img class="modimgleft" src="site-images/CT.png">
+            <img class="modimgleft" src="site-images/modimages/CT.png">
             <div class="modentryText">
                 <h3>Cinematic Tools</h3>
                 <hr>
@@ -27,10 +27,10 @@
                 <p>This pack contains more than 1300 new stickers. It has a built in update detection mechanism that will notify you when the pack is updated. Stickers that are white color are colorable. This pack works similiarly to car mods, you need to have the pack installed to see other people with custom stickers online. To remove the pack be sure to use the provided uninstaller in the CarX folder and follow instructions.<br><br>Big thanks to Huskyy for a lot of help during development.</p>
                 <a href="CarXStickerPack.html">Download Community Sticker Pack</a>
             </div>
-            <img class="modimgright" src="site-images/Stickerpack.png">
+            <img class="modimgright" src="site-images/modimages/Stickerpack.png">
         </div>
         <div class="modentry">
-            <img class="modimgleft" src="site-images/SoundMod.png">
+            <img class="modimgleft" src="site-images/modimages/SoundMod.png">
             <div class="modentryText">
                 <h3>Assetto Corsa Soundbank Loader Plugin</h3>
                 <hr>
@@ -45,7 +45,7 @@
                 <p>This plugin allows you to load a custom map from an OBJ format 3D model and use it as a track in the game. To make collisions work correctly you need to have a single mesh OBJ for collisions. This plugin also doesn't touch the original track's collision model so you can just go back to the original track without even leaving the lobby. Development has been put on hold. Planned features were going to inclue a menu where you select which map to load and the ability to disable and enable maps ingame. <br><br>Big thanks to Huskyy and Mr.CoolGoat for help during development</p>
                 <p>Download link unavailable</p>
             </div>
-            <img class="modimgright" src="site-images/MapLoader.png">
+            <img class="modimgright" src="site-images/modimages/MapLoader.png">
         </div>
         <footer>
             <div class="footerleft">
