--- a/indev/test1.html
+++ b/indev/test1.html
@@ -12,7 +12,7 @@
     <div class="content">
         <h1>Zi9's Software Creations</h1>
         <h2>CarX Drift Racing Online mods</h2>
-        <div class="flexcontainer">
+        <div class="modcardflexcontainer">
             <a href="../index.html" class="modcard">
                 <h3 class="modcardtitle">Cinematic Tools</h3>
                 <hr>
