finished ct page?

--- a/indev/cinematic-tools.html
+++ b/indev/cinematic-tools.html
@@ -19,8 +19,9 @@
                     <h2 class="modpagetitle">Cinematic Tools</h2>
                     <hr class="modpagesep">
                     <div class="modpageflex">
-                        <p class="modpagetext"><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations. This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.<br>It also features animatable FOV and Tilt controls.<br>Installation is described in the included Readme.txt file in the zip.</p>
+                        <p class="modpagetext"><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.<br><br>This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.<br><br>It also features animatable FOV and Tilt controls.<br><br>Installation is described in the included Readme.txt file in the zip.</p>
                     </div>
+                    <a class="modpagedl" href="../downloads/CinematicTools.zip">Download Cinematic Tools</a>
                 </div>
                 <div class="modpageimagecontainer">
                     <img class="modpageimage" src="../site-images/modimages/CT.png">
@@ -29,6 +30,15 @@
                         Your browser does not support embedded video :/
                     </video>
                 </div>
+            </div>
+            <h2>Featured Cinematics</h2>
+            <div class="modpageflex">
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/Nre8CNqoFgI"></iframe>
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/kUD1TD3Bm4Y"></iframe>
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/fWJ056tOKEA"></iframe>
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/e8IRuIcXLuw"></iframe>
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/iNwdO7DaGbI"></iframe>
+                <iframe class="modpageviditem" src="https://www.youtube.com/embed/hmjOcG59ft0"></iframe>
             </div>
         </div>
 
