--- a/indev/cinematic-tools.html
+++ b/indev/cinematic-tools.html
@@ -19,7 +19,7 @@
                     <h2 class="modpagetitle">Cinematic Tools</h2>
                     <hr class="modpagesep">
                     <div class="modpageflex">
-                        <p class="modpagetext"><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.<br><br>This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.<br><br>It also features animatable FOV and Tilt controls.<br><br>Installation is described in the included Readme.txt file in the zip.</p>
+                        <p class="modpagetext"><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.<br><br>This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.<br><br>It also features animatable FOV and Tilt controls.<br><br>Installation is described in the included Readme.txt file in the zip.<br><br>This is v1 of Cinematic Tools, the upcoming version will have a much more in-depth clip system, replay recording and editing and possibly even video exporting at a specified resolution and framerate. This will allow people who are not able to record the game at high FPS to make smooth cinematics as well. </p>
                     </div>
                     <a class="modpagedl" href="../downloads/CinematicTools.zip">Download Cinematic Tools</a>
                 </div>
