--- a/mods/cinematic-tools.html
+++ b/mods/cinematic-tools.html
@@ -3,7 +3,7 @@
 <head>
     <title>Zi9's Software Creations</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="teststyle.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" href="../site-images/icon.png">
     <script src="../jquery-3.4.1.min.js"></script>
 </head>
@@ -11,16 +11,14 @@
 <body>
     <div class="content">
         <h1>Zi9's Software Creations</h1>
-        <h2>CarX Drift Racing Online mods</h2>
-        <a class="backlink" href="test1.html">← Back to CarX Mods</a>
+        <h2>CarX Drift Racing Online Mods</h2>
+        <a class="backlink" href="../index.html">← Back to CarX Mods</a>
         <div class="modpageblock">
             <div class="modpageflex">
                 <div class="modpagetextcontainer">
                     <h2 class="modpagetitle">Cinematic Tools</h2>
                     <hr class="modpagesep">
-                    <div class="modpageflex">
                         <p class="modpagetext"><i>"Say no to shaky mouse cinematics"</i><br><br>Cinematic Tools is a plugin for CarX that allows the player to record smooth camera animations.<br><br>This plugin will allow you to set start and end points for your camera and allow you to set the time it will animate the camera between those points.<br><br>It also features animatable FOV and Tilt controls.<br><br>Installation is described in the included Readme.txt file in the zip.<br><br>This is v1 of Cinematic Tools, the upcoming version will have a much more in-depth clip system, replay recording and editing and possibly even video exporting at a specified resolution and framerate. This will allow people who are not able to record the game at high FPS to make smooth cinematics as well. </p>
-                    </div>
                     <a class="modpagedl" href="../downloads/CinematicTools.zip">Download Cinematic Tools</a>
                 </div>
                 <div class="modpageimagecontainer">
