--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <title>Zi9's Software Creations</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="icon" href="site-images/icon.png">
-    <script src="jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
@@ -48,25 +49,29 @@
             </div>
         </footer>
     </div>
-</body>
-<script>
-    var nextimage = Math.floor((Math.random() * 10));
-    function doSlideshow() {
-        if (nextimage >= 10) {
-            nextimage = 0;
+
+    <script src="jquery-3.4.1.min.js"></script>
+    <script>
+        var nextimage = Math.floor((Math.random() * 10));
+
+        function doSlideshow() {
+            if (nextimage >= 10) {
+                nextimage = 0;
+            }
+            $('body')
+                .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
+                .fadeIn(100, function() {
+                    setTimeout(doSlideshow, 10000);
+                });
+            nextimage++;
         }
-        $('body')
-            .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
-            .fadeIn(100, function() {
-                setTimeout(doSlideshow, 10000);
-            });
-        nextimage++;
-    }
-    doSlideshow();
-    for (var i = 0; i < 10; ++i) {
-        var img = new Image();
-        img.src = "../site-images/backgrounds/bg" + i + ".jpg";
-    }
-</script>
+        doSlideshow();
+        for (var i = 0; i < 10; ++i) {
+            var img = new Image();
+            img.src = "../site-images/backgrounds/bg" + i + ".jpg";
+        }
+
+    </script>
+</body>
 
 </html>
