--- a/mods/ac-bank-mod.html
+++ b/mods/ac-bank-mod.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <title>Zi9's Software Creations</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" href="../site-images/icon.png">
-    <script src="../jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <div class="modpagetextcontainer">
                     <h2 class="modpagetitle">Assetto Corsa Soundbank Loader</h2>
                     <hr class="modpagesep">
-                        <p class="modpagetext">This plugin allows you to use soundbanks from the game Assetto Corsa and replace the default ingame sounds with the ones from the soundbank. It uses the FMOD sound engine.<br><br>Sadly it has been broken due to CarX implementing FMOD themselves and that breaks my implementation. Additionally it was going to have a menu where you can select which soundbank to load and automatic loading of the bank you select on race start.<br><br>Currently development of this plugin has been put on hold but there is a chance i will revisit it sometime in the future.</p>
+                    <p class="modpagetext">This plugin allows you to use soundbanks from the game Assetto Corsa and replace the default ingame sounds with the ones from the soundbank. It uses the FMOD sound engine.<br><br>Sadly it has been broken due to CarX implementing FMOD themselves and that breaks my implementation. Additionally it was going to have a menu where you can select which soundbank to load and automatic loading of the bank you select on race start.<br><br>Currently development of this plugin has been put on hold but there is a chance i will revisit it sometime in the future.</p>
                     <p class="modpagedl">Download link unavailable</p>
                 </div>
                 <div class="modpageimagecontainer">
@@ -37,27 +38,29 @@
             </div>
         </footer>
     </div>
-</body>
-<script>
-    var nextimage = Math.floor((Math.random() * 10));
 
-    function doSlideshow() {
-        if (nextimage >= 10) {
-            nextimage = 0;
+    <script src="../jquery-3.4.1.min.js"></script>
+    <script>
+        var nextimage = Math.floor((Math.random() * 10));
+
+        function doSlideshow() {
+            if (nextimage >= 10) {
+                nextimage = 0;
+            }
+            $('body')
+                .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
+                .fadeIn(100, function() {
+                    setTimeout(doSlideshow, 10000);
+                });
+            nextimage++;
         }
-        $('body')
-            .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
-            .fadeIn(100, function() {
-                setTimeout(doSlideshow, 10000);
-            });
-        nextimage++;
-    }
-    doSlideshow();
-    for (var i = 0; i < 10; ++i) {
-        var img = new Image();
-        img.src = "../site-images/backgrounds/bg" + i + ".jpg";
-    }
+        doSlideshow();
+        for (var i = 0; i < 10; ++i) {
+            var img = new Image();
+            img.src = "../site-images/backgrounds/bg" + i + ".jpg";
+        }
 
-</script>
+    </script>
+</body>
 
 </html>
