--- a/mods/custom-map-loader.html
+++ b/mods/custom-map-loader.html
@@ -1,11 +1,12 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 
 <head>
+    <meta charset="utf-8">
     <title>Zi9's Software Creations</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="icon" href="../site-images/icon.png">
-    <script src="../jquery-3.4.1.min.js"></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
                 <div class="modpagetextcontainer">
                     <h2 class="modpagetitle">Custom Map Loader</h2>
                     <hr class="modpagesep">
-                        <p class="modpagetext">This plugin allows you to load a custom map from an OBJ format 3D model and use it as a track in the game. To make collisions work correctly you need to have a single mesh OBJ for collisions. This plugin also doesn't touch the original track's collision model so you can just go back to the original track without even leaving the lobby. <br><br>Development has been put on hold. Planned features were going to inclue a menu where you select which map to load and the ability to disable and enable maps ingame. <br><br>Big thanks to Huskyy and Mr.CoolGoat for help during development</p>
+                    <p class="modpagetext">This plugin allows you to load a custom map from an OBJ format 3D model and use it as a track in the game. To make collisions work correctly you need to have a single mesh OBJ for collisions. This plugin also doesn't touch the original track's collision model so you can just go back to the original track without even leaving the lobby. <br><br>Development has been put on hold. Planned features were going to inclue a menu where you select which map to load and the ability to disable and enable maps ingame. <br><br>Big thanks to Huskyy and Mr.CoolGoat for help during development</p>
                     <p class="modpagedl">Download link unavailable</p>
                 </div>
                 <div class="modpageimagecontainer">
@@ -37,27 +38,29 @@
             </div>
         </footer>
     </div>
-</body>
-<script>
-    var nextimage = Math.floor((Math.random() * 10));
 
-    function doSlideshow() {
-        if (nextimage >= 10) {
-            nextimage = 0;
+    <script src="../jquery-3.4.1.min.js"></script>
+    <script>
+        var nextimage = Math.floor((Math.random() * 10));
+
+        function doSlideshow() {
+            if (nextimage >= 10) {
+                nextimage = 0;
+            }
+            $('body')
+                .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
+                .fadeIn(100, function() {
+                    setTimeout(doSlideshow, 10000);
+                });
+            nextimage++;
         }
-        $('body')
-            .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
-            .fadeIn(100, function() {
-                setTimeout(doSlideshow, 10000);
-            });
-        nextimage++;
-    }
-    doSlideshow();
-    for (var i = 0; i < 10; ++i) {
-        var img = new Image();
-        img.src = "../site-images/backgrounds/bg" + i + ".jpg";
-    }
+        doSlideshow();
+        for (var i = 0; i < 10; ++i) {
+            var img = new Image();
+            img.src = "../site-images/backgrounds/bg" + i + ".jpg";
+        }
 
-</script>
+    </script>
+</body>
 
 </html>
