--- a/index.html
+++ b/index.html
@@ -1,77 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <title>Zi9's Software Creations</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="icon" href="site-images/icon.png" />
+    </head>
 
-<head>
-    <meta charset="utf-8">
-    <title>Zi9's Software Creations</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <link rel="icon" href="site-images/icon.png">
-</head>
+    <body>
+        <div class="content">
+            <h1>Zi9's Software Creations</h1>
+            <h2>CarX Drift Racing Online mods</h2>
 
-<body>
-    <div class="content">
-        <h1>Zi9's Software Creations</h1>
-        <h2>CarX Drift Racing Online mods</h2>
-        <div class="modcardflexcontainer">
-            <a href="mods/cinematic-tools.html" class="modcard">
-                <h3 class="modcardtitle">Cinematic Tools</h3>
-                <hr>
-                <p class="modcardtext">This is a plugin to ease the creation of cinematic content</p>
-                <img class="modcardimg" src="site-images/modimages/CT.png">
-            </a>
-            <a href="mods/community-sticker-pack.html" class="modcard">
-                <h3 class="modcardtitle">Community Sticker Pack</h3>
-                <hr>
-                <p class="modcardtext">This pack adds many new stickers to your game</p>
-                <img class="modcardimg" src="site-images/modimages/Stickerpack.png">
-            </a>
-            <a href="mods/ac-bank-mod.html" class="modcard">
-                <h3 class="modcardtitle">Assetto Corsa Soundbank Loader</h3>
-                <hr>
-                <p class="modcardtext">This plugin allows you to use sounds from Assetto Corsa</p>
-                <img class="modcardimg" src="site-images/modimages/SoundMod.png">
-            </a>
-            <a href="mods/custom-map-loader.html" class="modcard">
-                <h3 class="modcardtitle">Custom Map Loader</h3>
-                <hr>
-                <p class="modcardtext">This plugin allows you to load custom maps from OBJ files</p>
-                <img class="modcardimg" src="site-images/modimages/MapLoader.png">
-            </a>
+            <div id="error" class="error-container"><span class="error"></span></div>
+            <div id="dynamic-content"></div>
+
+            <hr />
+
+            <footer>
+                <div class="footerleft">
+                    <p>Contact me at Zi9#3641 on Discord</p>
+                </div>
+                <div class="footerright">
+                    <p>Background images provided by KVERTH</p>
+                </div>
+            </footer>
         </div>
-        <hr>
-        <footer>
-            <div class="footerleft">
-                <p>Contact me at Zi9#3641 on Discord</p>
-            </div>
-            <div class="footerright">
-                <p>Background images provided by KVERTH</p>
-            </div>
-        </footer>
-    </div>
 
-    <script src="jquery-3.4.1.min.js"></script>
-    <script>
-        var nextimage = Math.floor((Math.random() * 10));
+        <script src="jquery-3.4.1.min.js"></script>
+        <script>
+            var imagesCount = 10;
+            var nextImageId = Math.floor(Math.random() * imagesCount);
 
-        function doSlideshow() {
-            if (nextimage >= 10) {
-                nextimage = 0;
+            function getBackgroundImagePath(imageId) {
+                return "site-images/backgrounds/bg" + imageId + ".jpg";
             }
-            $('body')
-                .css('background-image', 'url("../site-images/backgrounds/bg' + nextimage + '.jpg")')
-                .fadeIn(100, function() {
-                    setTimeout(doSlideshow, 10000);
+
+            $(window).on("load", function() {
+                for (var i = 0; i < imagesCount; ++i) {
+                    var img = new Image();
+                    img.src = getBackgroundImagePath(i);
+                }
+            });
+
+            $(window).on("popstate", function() {
+                console.log("onpopstate() pathname: " + location.pathname, window.location.hash);
+                loadPageFromHashUrl(window.location.hash);
+            });
+
+            $(function() {
+                doSlideshow();
+
+                var hash = window.location.hash;
+                loadPageFromHashUrl(hash);
+
+                if (!hash) {
+                    window.location.hash = "home";
+                }
+            });
+
+            function doSlideshow() {
+                if (nextImageId >= imagesCount) {
+                    nextImageId = 0;
+                }
+                $("body")
+                    .css("background-image", 'url("' + getBackgroundImagePath(nextImageId) + '")')
+                    .fadeIn(100, function() {
+                        setTimeout(doSlideshow, 3000);
+                    });
+                nextImageId++;
+            }
+
+            function renderPageContents(url) {
+                $("#error").hide();
+                $("#dynamic-content").load(url, function(response, status, xhr) {
+                    if (status == "error") {
+                        $("#error").show(function() {
+                            $(this)
+                                .find("span")
+                                .html("Sorry but there was an error: " + xhr.status + " " + xhr.statusText);
+                        });
+                    }
                 });
-            nextimage++;
-        }
-        doSlideshow();
-        for (var i = 0; i < 10; ++i) {
-            var img = new Image();
-            img.src = "../site-images/backgrounds/bg" + i + ".jpg";
-        }
+            }
 
-    </script>
-</body>
+            function loadPageFromHashUrl(hash) {
+                var url = "home";
 
+                if (hash) {
+                    url = hash.replace(/#/, "").replace(".html", "");
+                }
+
+                if (url === "index") {
+                    url = "home";
+                }
+
+                renderPageContents(url + ".html");
+            }
+        </script>
+    </body>
 </html>
