Moved some stuff around

--- a/home.html
+++ b/home.html
@@ -1,5 +1,5 @@
 <div class="modcardflexcontainer">
-    <a href="#mods/cinematic-tools.html" class="modcard">
+    <a href="#carxmods/cinematic-tools.html" class="modcard">
         <h3 class="modcardtitle">Cinematic Tools</h3>
         <hr />
         <p class="modcardtext">
@@ -7,13 +7,13 @@
         </p>
         <img class="modcardimg" src="site-images/modimages/CT.png" />
     </a>
-    <a href="#mods/community-sticker-pack.html" class="modcard">
+    <a href="#carxmods/community-sticker-pack.html" class="modcard">
         <h3 class="modcardtitle">Community Sticker Pack</h3>
         <hr />
         <p class="modcardtext">This pack adds many new stickers to your game</p>
         <img class="modcardimg" src="site-images/modimages/Stickerpack.png" />
     </a>
-    <a href="#mods/ac-bank-mod.html" class="modcard">
+    <a href="#carxmods/ac-bank-mod.html" class="modcard">
         <h3 class="modcardtitle">Assetto Corsa Soundbank Loader</h3>
         <hr />
         <p class="modcardtext">
@@ -21,7 +21,7 @@
         </p>
         <img class="modcardimg" src="site-images/modimages/SoundMod.png" />
     </a>
-    <a href="#mods/custom-map-loader.html" class="modcard">
+    <a href="#carxmods/custom-map-loader.html" class="modcard">
         <h3 class="modcardtitle">Custom Map Loader</h3>
         <hr />
         <p class="modcardtext">
