--- a/carxmods/cinematic-tools.html
+++ b/carxmods/cinematic-tools.html
@@ -14,7 +14,7 @@
                 even video exporting at a specified resolution and framerate. This will allow people who are not able to
                 record the game at high FPS to make smooth cinematics as well.
             </p>
-            <a class="modpagedl" href="downloads/CinematicTools.zip">Download Cinematic Tools</a>
+            <p class="modpagedl">Download link unavailable</p>
         </div>
         <div class="modpageimagecontainer">
             <img class="modpageimage" src="site-images/modimages/CT.png" />
