--- a/carxmods/community-sticker-pack.html
+++ b/carxmods/community-sticker-pack.html
@@ -10,7 +10,7 @@
                 remove the pack be sure to use the provided uninstaller in the CarX folder and follow instructions.<br /><br />Big thanks to Huskyy for a lot of help during development and all the
                 people who submitted their stickers to be added.
             </p>
-            <a class="modpagedl" href="https://drive.google.com/open?id=1lLbhcywDR7TWCYlgr1p9aJIk67OTnhxX" target="_blank">Download Community Sticker Pack</a>
+            <p class="modpagedl">Download link unavailable</p>        
         </div>
         <div class="modpageimagecontainer">
             <img class="modpageimage" src="site-images/modimages/Stickerpack.png" />
