--- a/test-app/index.html
+++ b/test-app/index.html
@@ -15,7 +15,7 @@
             <div class="clear"></div>
         </div>
         <div class="window-content">
-            <iframe style="width:100%;height:100%" src="http://www.example.com"></iframe>
+            <iframe style="width:100%;height:100%" src="https://www.example.com"></iframe>
         </div>
     </div>
 </body>
