Add link to old site

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Site offline for now</h1>
 <p>Contact me on Discord at Zi9#3641</p>
+<a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</p>
 </body>
 </html>
