--- a/carxstuff/carxmods/ac-bank-mod.html
+++ b/carxstuff/carxmods/ac-bank-mod.html
@@ -17,5 +17,11 @@
         <div class="modpageimagecontainer">
             <img class="modpageimage" src="site-images/modimages/SoundMod.png" />
         </div>
+
+        <h2>Tests of it in action</h2>
+        <div class="modpageflex">
+            <iframe class="modpageviditem" src="https://www.youtube.com/embed/AIaLMEzZWMU"></iframe>
+            <iframe class="modpageviditem" src="https://www.youtube.com/embed/D8KqKmYlYhk"></iframe>
+        </div>
     </div>
 </div>
