--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title>Zi9s CarX Mods</title>
-</head>
-<body>
-<h1>Site offline for now</h1>
-<p>Contact me on Discord at Zi9#3641</p>
-<a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</p>
-</body>
+  </head>
+  <body>
+    <h1>Site offline for now</h1>
+    <p>Contact me on Discord at Zi9#3641</p>
+    <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
+  </body>
 </html>
