--- a/stickscoreboard.html
+++ b/stickscoreboard.html
@@ -4,7 +4,7 @@
   <style type="text/css">
    body { text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
    p { text-align: center; margin: 5px; }
-   table { margin-left: auto; margin-right: auto; border-collapse: collapse;}
+   table { margin-left: auto; margin-right: auto; border-collapse: collapse; display: none;}
    td { border: 1px solid black; min-width: 50px;}
    a { font-size: x-small; }
   </style>
@@ -21,6 +21,7 @@
     <td><p>2</p></td>
    </tr>
   </table>
+  <p>Error loading table from database. Check console for details</p>
   <h4 id="time"></h4>
 
   <a href="whats_this.mp4">DEBUG CONSOLE</a>
