--- a/stickscoreboard.html
+++ b/stickscoreboard.html
@@ -21,26 +21,6 @@
     <td><p>3</p></td>
    </tr>
   </table>
-  <h4 id="time"></h4>
-
-  <a href="whats_this.mp4">DEBUG CONSOLE</a>
-
-  <script>
-   var countDownDate = new Date("Aug 16, 2020 00:00:00").getTime();
-   var x = setInterval(function() {
-    var now = new Date().getTime();
-    var distance = countDownDate - now;
-    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-    document.getElementById("time").innerHTML = days + "d " + hours + "h "
-     + minutes + "m " + seconds + "s left for stickbugging";
-    if (distance < 0) {
-     clearInterval(x);
-     document.getElementById("time").innerHTML = "WAR OVER";
-    }
-   }, 1000);
-  </script>
+  <h4>Congrats Axel - U did it</h4>
  </body>
 </html>
