--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Zi9s CarX Mods</title>
-  </head>
-  <body>
-    <h1>Site offline for now</h1>
-    <p>Contact me on Discord at Zi9#3641</p>
-    <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
-  </body>
+ <head>
+  <title>Zi9s CarX Mods</title>
+  <style>
+h2 { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+p { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+a { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
+  </style>
+ </head>
+ <body>
+  <h2>Site offline for now</h1>
+  <p>Contact me on Discord at Zi9#3641</p>
+  <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
+ </body>
 </html>
