Update docs, add source file

--- a/zimap/zimap-doc.html
+++ b/zimap/zimap-doc.html
@@ -444,7 +444,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h1>Zi9&#8217;s MapLoader map creation documentation</h1>
 <div class="details">
 <span id="author" class="author">Zi9</span><br>
-<span id="revnumber">version 1.0 2021-01-11</span>
+<span id="revnumber">version 1.0 2021-01-23</span>
 </div>
 <div id="toc" class="toc">
 <div id="toctitle">Table of Contents</div>
@@ -467,7 +467,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div id="preamble">
 <div class="sectionbody">
 <div class="paragraph">
-<p>Zi9&#8217;s Map Loader is a plugin that enables community made maps to be loaded ingame like regular CarX maps. These maps are built within the Unity game engine and exported as AssetBundles.</p>
+<p>Zi9&#8217;s Map Loader is a plugin for CarX Drift Racing Online, that enables community made maps to be loaded ingame like regular CarX maps. These maps are built within the Unity game engine and exported as AssetBundles.</p>
 </div>
 </div>
 </div>
@@ -480,7 +480,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <div class="ulist">
 <ul>
 <li>
-<p>Unity 2019.4.10f1</p>
+<p>Unity 2019.4.14f1</p>
 </li>
 <li>
 <p>Map Builder Utility (Zimap SDK)</p>
@@ -528,7 +528,7 @@ The name must only contain ASCII characters (A-Z a-Z 0-9)
 <div class="sect2">
 <h3 id="_generating_an_id_for_your_map">Generating an ID for your map</h3>
 <div class="paragraph">
-<p>You can generate an ID using the MapBuilder.exe by just double-clicking on it, it will generate an id and save it in <code>id.txt</code> next to the executable.</p>
+<p>You can generate an ID using the MapBuilder.exe by just double-clicking on it, it will generate an id and save it in <code>id.txt</code> next to the executable. Move this into your map data folder.</p>
 </div>
 </div>
 <div class="sect2">
@@ -620,8 +620,8 @@ Keep texture sizes reasonable (a 1920x1080 icon doesn&#8217;t make sense)
 </div>
 <div id="footer">
 <div id="footer-text">
-Version 1.0 2021-01-11<br>
-Last updated 2021-01-11 18:43:41 +0200
+Version 1.0 2021-01-23<br>
+Last updated 2021-01-23 00:05:35 +0200
 </div>
 </div>
 </body>
