--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
  <head>
-  <title>Zi9s CarX Mods</title>
+  <title>Zi9's Stuff</title>
   <style>
 h2 { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
 p { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
@@ -9,8 +9,9 @@ a { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
   </style>
  </head>
  <body>
-  <h2>Site offline for now</h1>
+  <h2>Nothing too cool here atm ;)</h2>
   <p>Contact me on Discord at Zi9#3641</p>
   <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
+  <a href="https://zi9.github.io/zimap/zimap-doc.html">Map Loader documentation</a>
  </body>
 </html>
