remove bundle extension

--- a/zimap/zimap-doc.html
+++ b/zimap/zimap-doc.html
@@ -620,7 +620,7 @@ Your final map scene must have the id as its name
 </div>
 </div>
 <div class="paragraph">
-<p>After exporting the asset bundle, you only need the file that has no file extension. Rename that to map.assetbundle and place it in your map data folder.</p>
+<p>After exporting the asset bundle, you only need the file that has no file extension. Rename that to <code>map</code> and place it in your map data folder.</p>
 </div>
 </div>
 <div class="sect2">
@@ -674,7 +674,7 @@ Keep texture sizes reasonable (a 1920x1080 icon doesn&#8217;t make sense)
 ├── id.txt
 ├── loadscreen.png
 ├── lobby.png
-├── map.assetbundle
+├── map
 ├── meta.txt
 └── minimap.png</pre>
 </div>
@@ -695,7 +695,7 @@ Keep texture sizes reasonable (a 1920x1080 icon doesn&#8217;t make sense)
 <div id="footer">
 <div id="footer-text">
 Version 1.1<br>
-Last updated 2021-01-25 16:50:54 +0200
+Last updated 2021-02-10 19:53:16 +0200
 </div>
 </div>
 </body>
