--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@ a { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
   <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
   <br>
   <a href="https://zi9.github.io/zimap/zimap-doc.html">Map Loader documentation</a>
+  <br>
+  <a href="https://zi9.github.io/zimap/zimap-stepbystep.html">Map Loader step by step guide</a>
  </body>
 </html>
