--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
- <head>
-  <title>Zi9's Stuff</title>
-  <style>
-h2 { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-p { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-a { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; }
-  </style>
- </head>
- <body>
-  <h2>Nothing too cool here atm ;)</h2>
-  <p>Contact me on Discord at Zi9#3641</p>
-  <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
-  <br>
-  <a href="https://zi9.github.io/zimap/zimap-doc.html">Map Loader documentation</a>
-  <br>
-  <a href="https://zi9.github.io/zimap/zimap-stepbystep.html">Map Loader step by step guide</a>
- </body>
+
+<head>
+    <title>Zi9's Stuff</title>
+    <style>
+        h2,
+        p,
+        a {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+    </style>
+</head>
+
+<body>
+    <h2>Nothing too cool here atm ;)</h2>
+    <p>Contact me on Discord at Zi9#3641</p>
+    <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
+    <br>
+    <a href="https://zi9.github.io/zimap/zimap-doc.html">Map Loader documentation</a>
+    <br>
+    <a href="https://zi9.github.io/zimap/zimap-stepbystep.html">Map Loader step by step guide</a>
+</body>
+
 </html>
