--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 <head>
     <title>Zi9's Stuff</title>
     <style>
-        h2,
-        p,
-        a {
+        body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
         }
     </style>
