Fix links on main page

--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 <body>
     <h2>Nothing too cool here atm ;)</h2>
     <p>Contact me on Discord at Zi9#3641</p>
-    <a href="https://zi9.github.io/carxstuff/#home">Old CarX Mods Page</a>
+    <a href="old-carx-stuff/#home">Old CarX Mods Page</a>
     <br>
-    <a href="https://zi9.github.io/zimap/zimap-doc.html">Map Loader documentation</a>
-    <br>
-    <a href="https://zi9.github.io/zimap/zimap-stepbystep.html">Map Loader step by step guide</a>
+    <a href="zimap/">Map Loader Page</a>
 </body>
 
 </html>
