--- a/zimap/index.html
+++ b/zimap/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="card card-blue">
             <h1 class="centertitle">For Mappers</h1>
-            <p>This section is for people who want to make or port a map to the Map Loader</p>
+            <p>This section is for people who want to make or port a map to the Map Loader.</p>
             <a class="centertext" href="docs/zimap-doc.html">
                 <h3>Documentation</h3>
             </a>
